CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - Current

general
======================
* End of support for compiling/running Cruise with JDK 1.3. New earliest supported JDK is 1.4.x.
* Replace Xalan with Saxon.
* Add Ant-style launcher (CC-268).  Patch by Robert J. Smith.
* Add documentation for lockfilebootstrapper and lockfilelistener (CC-507).  Patch by Allan Wick.
* Fixes for installer (CC-505).  Patch by Julian Simpson:
  - displays README instead of RELEASENOTES
  - now with Windows service
  - backs up logs and artifacts to your Windows profile temp dir when removing
  - cleans out install dir

contrib
======================
* Update distributed CC code for refactoring in core (CC-485). Patch by Dan Rollo
* Fix bug in distributed where empty results subdirectories cause exception (CC-458). Patch by Dan Rollo
* Fix bug where distributed InteractiveBuildUtility always fails to build (CC-459). Patch by Dan Rollo

build loop
======================

AntBuilder
----------------------
* Add optional attribute "keepgoing" to invoke ant with -keep-going flag. Submitted by Stephen George
* Can once again use optional tasks with internal version of ant (CC-400). Patch via Dan Rollo

BuildStatus
----------------------
* Better error message when log directory doesn't exist (CC-487). Submitted by Sven Strohschein

CMSynergy
----------------------
* Use a four part project name for projects (CC-370). Reported by Antek Baranski.  Patch by Robert J. Smith and Antek Baranski.

ConcurrentVersionSystem
----------------------
* Remove race condition on closing error stream.

cruisecontrol.bat
----------------------
* Was failing to execute java when JAVA_HOME wasn't set (CC-492).

CruiseControlConfig
----------------------
* Allow properties inside of preconfigured template projects. Patch by Jerome Lacoste

default-plugins.properties
----------------------